tests/specs/class_extends_implements.txt
# mod.ts
export class Class extends Object implements Iterator, Iterable {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export class Class extends Object implements Iterator, Iterable {}
  | ^

# output.txt
Defined in file:///mod.ts:0:1

class Class extends Object implements Iterator, Iterable



# output.json
{
  "symbols": [
    {
      "name": "Class",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 0,
            "byteIndex": 0
          },
          "declarationKind": "export",
          "kind": "class",
          "def": {
            "extends": "Object",
            "implements": [
              {
                "repr": "Iterator",
                "kind": "typeRef",
                "value": {
                  "typeName": "Iterator"
                }
              },
              {
                "repr": "Iterable",
                "kind": "typeRef",
                "value": {
                  "typeName": "Iterable"
                }
              }
            ]
          }
        }
      ]
    }
  ]
}
